--- a/style.css
+++ b/style.css
@@ -9,18 +9,15 @@
     font-family: "Poppins", sans-serif;
 }
 
-body{
-    overflow: hidden;
-}
-
 .background{
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    background: rgb(45,45,45);
+    background: linear-gradient(0deg, rgb(36, 36, 36) 0%, rgba(0,0,0,1) 100%);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url('Design\ sem\ nome.jpg');
     width: 100%;
     height: 100vh;
+    overflow-y: auto;
 }
 
 header{
@@ -129,4 +126,13 @@ button:hover{
 
 .btn{
     margin-top: 10px;
+}
+
+.imagem-direita{
+    float: right; /* Alinhe a imagem à direita */
+    margin-left: 20px; /* Adicione margem à esquerda para separar do conteúdo */
+    margin-top: -250px;
+    width: 500px; /* Defina a largura desejada para a imagem */
+    height: auto; /* Mantenha a proporção da imagem */
+    clear: right;
 }
